<resources>
    <string name="app_name">iPark</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCi3gCa_aLlXhu72sKBXkGex4rFyFUcMAU</string>

    <string name="title_home">Home</string>
    <string name="title_reservations">My Reservations</string>
    <string name="title_rewards">Reward Points</string>
    <string name="title_menu">Menu</string>
    <string name="title_saved">Saved Garages</string>
    <string name="title_search">Let\'s Find Your Spot</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_help">Help</string>
    <string name="title_faq">FAQ</string>
    <string name="title_account">Account</string>
    <string name="title_billing">Billing Settings</string>
    <string name="tab_home">Home</string>
    <string name="tab_reservations">Reservations</string>
    <string name="tab_rewards">Rewards</string>
    <string name="tab_menu">Menu</string>

    <string name="address">ADDRESS:</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="add_to_calendar">Add To Calendar</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="already_registered">Already registered? Login here:</string>
    <string name="amenities">AMENITIES:</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="billing_description">If using an international cell phone please include a valid country code and cell phone number to receive an SMS with confirmed parking reservation information (e.g. +44XXXXXXXXXXX).</string>
    <string name="book_again">Book Again</string>
    <string name="book_now">Book Now</string>
    <string name="book_on_multiple_days">Book on Multiple Days</string>
    <string name="by_purchasing">By purchasing, you agree to iPark\'s Terms and Conditions</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_your_settings">Change your settings here:</string>
    <string name="card_details">CARD DETAILS</string>
    <string name="card_number">Card Number</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="choose_topic">Choose the topic you are interested in:</string>
    <string name="city">City</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="color">Color</string>
    <string name="completed">Completed</string>
    <string name="country">Country</string>
    <string name="create_account">Create an Account</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="cvv">CVV</string>
    <string name="daily">Daily</string>
    <string name="details">Details</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="directions">Directions</string>
    <string name="dont_account">Don\'t have account?</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_us">Email Us</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_time">Enter Time</string>
    <string name="exit_time">Exit Time</string>
    <string name="error_empty_address">Address is required.</string>
    <string name="error_empty_country">Country is required.</string>
    <string name="error_empty_start_time">Start time is required.</string>
    <string name="error_empty_end_time">End time is required.</string>
    <string name="error_empty_start_parking_on">Start parking on is required.</string>
    <string name="error_empty_email">Email is required.</string>
    <string name="error_invalid_email">Email is invalid.</string>
    <string name="error_empty_phone">Phone number is required.</string>
    <string name="error_invalid_phone">Phone number is invalid.</string>
    <string name="error_empty_full_name">Full name is required.</string>
    <string name="error_empty_password">Password is required.</string>
    <string name="error_empty_repeat_password">Repeat password is required.</string>
    <string name="error_mismatch_password">The specified password do not match.</string>
    <string name="error_empty_card_number">Card Number is required.</string>
    <string name="error_invalid_card_number">Card Number is invalid.</string>
    <string name="error_empty_exp_date">Exp. Date is required.</string>
    <string name="error_invalid_exp_date">Exp. Date is invalid.</string>
    <string name="error_invalid_cvv">CVV is invalid.</string>
    <string name="error_empty_city">City is required.</string>
    <string name="error_empty_state">State is required.</string>
    <string name="error_empty_zipcode">Zip Code is required.</string>
    <string name="error_invalid_zipcode">Zip Code is invalid.</string>
    <string name="error_empty_vehicle_make">Vehicle Make is required.</string>
    <string name="error_empty_vehicle_model">Vehicle Model is required.</string>
    <string name="error_empty_color">Color is required.</string>
    <string name="error_empty_plate">Plate is required.</string>
    <string name="exp_date">Exp. Date</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="faq1">FAQ</string>
    <string name="filters">Filters</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="full_name">Full name</string>
    <string name="get_directions">Get Directions</string>
    <string name="have_account">Already have an account?</string>
    <string name="help">Help</string>
    <string name="hours_of_operation">HOURS OF OPERATION:</string>
    <string name="included">Included:</string>
    <string name="info">Info</string>
    <string name="ipark_rewards">iPark Rewards</string>
    <string name="ipark_rewards_description">Sign up and earn for each reservation!</string>
    <string name="list">List</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="monthly">Monthly</string>
    <string name="monthly_parking">Monthly Parking</string>
    <string name="my_account">My Account</string>
    <string name="my_vehicles">MY\nVEHICLES</string>
    <string name="paid">Paid</string>
    <string name="password">Password</string>
    <string name="past">Past</string>
    <string name="payment_method">Payment Method</string>
    <string name="phone">Phone</string>
    <string name="phone_number">PHONE NUMBER:</string>
    <string name="phone_number1">PHONE NUMBER</string>
    <string name="placeholder_end_time">End Time</string>
    <string name="placeholder_search">Street, attraction or neighborhood</string>
    <string name="placeholder_start_parking_on">Start Parking On</string>
    <string name="placeholder_start_time">Start Time</string>
    <string name="plate">Plate</string>
    <string name="privacy_policy">Privacy Plicy</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="rates">Rates</string>
    <string name="rate_us">Rate Us</string>
    <string name="rebook">Rebook</string>
    <string name="recently_booked_locations">Recently Booked Locations</string>
    <string name="register">Register</string>
    <string name="registration">Registraion</string>
    <string name="registration_description">Register as \"iPark Reward\" member</string>
    <string name="regular">Regular</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="reward_points">REWARD POINTS</string>
    <string name="save_changes">Save Changes</string>
    <string name="saved_locations">SAVED LOCATIONS</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign in</string>
    <string name="sort_by_distance">Sort By Distance</string>
    <string name="sort_by_price">Sort By Price</string>
    <string name="specials">Specials</string>
    <string name="state">State</string>
    <string name="stay_period">Stay Period</string>
    <string name="suv">SUV</string>
    <string name="suv_large">Large SUV</string>
    <string name="take_picture">Take a picture</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="things_you_know">Things You Should Know:</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcoming_reservations">UPCOMING RESERVATIONS</string>
    <string name="vehicle">VEHICLE:</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="website">Website</string>
    <string name="zip_code">Zip Code</string>
    <string name="add_up_to_vehicles">You can add up to 3 vehicles</string>

    <!--Filter options-->
    <string name="hours24">24 Hours</string>
    <string name="days7">7 Days</string>
    <string name="covered">Covered</string>
    <string name="paved">Paved</string>
    <string name="valet">Valet</string>
    <string name="oversized_vehicles">Oversized Vehicles</string>
    <string name="green">Green</string>
    <string name="tesla">Tesla</string>
    <string name="outdoors">Outdoors</string>
    <string name="onsite_staff">On-Site Staff</string>

</resources>
